<resources>
    <string name="app_name">Organizze</string>
    <string name="title_lancamento">Lançamentos</string>
    <string name="title_adicionar_despesa">Adicionar Despesas</string>
    <string name="title_relatorio">Relatórios</string>
    <string name="title_meta">Metas</string>
    <string name="title_inicio">Início</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string-array name="array_categoria">
        <item>Alimentação</item>
        <item>Assinaturas e serviços</item>
        <item>Bares e restaurantes</item>
        <item>Casa</item>
        <item>Compras</item>
    </string-array>

    <string-array name="array_pagamento">
        <item>Conta Inicial</item>
    </string-array>

</resources>
